--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -1,120 +1,83 @@
 .filter {
-  background: #162f54;
-  border-radius: 12px;
-  padding: 60px 20px;
-  height: 100%;
+    background: #402a7d;
+    backdrop-filter: blur(50px);
+    min-height: 100%;
 
-  .create-game {
-    color: #ffffff;
-    font-weight: 600;
-    font-size: 18px;
-    padding: 14px 12px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    box-sizing: border-box;
-    border-radius: 8px;
-    margin-bottom: 40px;
-    cursor: pointer;
-  }
-
-  .game-group {
-    padding: 12px 24px;
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    box-sizing: border-box;
-    border-radius: 8px;
-
-    .title {
-      font-weight: 600;
-      font-size: 20px;
-      color: #ffffff;
-      padding: 12px 0px;
-      cursor: pointer;
-    }
-
-    .active {
-      color: #bbf2ff;
-      border-bottom: 2px solid #bbf2ff;
-    }
-
-    .panel {
-      padding: 12px 0px;
-      margin-top: 12px;
-
-      .panel-item {
-        font-weight: 600;
-        font-size: 16px;
-        color: #ffffff;
-        padding: 12px 8px;
+    .game-info {
         display: flex;
+        flex-direction: column;
+        padding: 35px 42px;
         align-items: center;
-        transition-duration: 0.3s;
-        cursor: pointer;
-		
-        &:hover {
-          background: #172944;
-          color: #8deaff;
+        justify-content: center;
+        position: relative;
+
+        .image-box {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            padding: 3px;
+            z-index: 2;
+            background: #402a7d;
+            text-align: center;
+
+            .game-image {
+                width: 74px;
+                height: 74px;
+                border-radius: 50%;
+                padding: 5px;
+                z-index: 3;
+                background: #e7dfff;
+            }
         }
 
-        .game-logo {
-          width: 28px;
-          height: 28px;
-          margin-right: 16px;
-          border-radius: 50px;
-          background-color: #ffffff;
+        .game-name {
+            position: absolute;
+            bottom: -10%;
+            width: fit-content;
+            background: rgba(254, 253, 255, 0.25);
+            border: 1px solid #ccb9ff;
+            box-sizing: border-box;
+            border-radius: 8px;
+            padding: 26px 50px 14px 50px;
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 150%;
+            color: #e7dfff;
         }
-      }
-
-      .active-game {
-        background: #172944;
-        color: #8deaff;
-      }
     }
-  }
 
-  //   .collapse {
-  //     border: 1px solid rgba(255, 255, 255, 0.5);
-  //     box-sizing: border-box;
-  //     border-radius: 8px;
-  //     cursor: pointer;
-  //     margin-bottom: 40px;
-  //     .collapse-title {
-  //       display: flex;
-  //       align-items: center;
-  //       justify-content: space-between;
-  //       font-weight: 600;
-  //       font-size: 18px;
-  //       color: #ffffff;
-  //       padding: 14px 12px;
-  //     }
+    .menu {
+        margin-top: 60px;
+        border-top: 1px solid #5e4b93;
+        padding-top: 40px;
 
-  //   .panel {
-  //     padding: 12px 0px;
-  //     border-top: 1px solid rgba(255, 255, 255, 0.5);
+        .menu-item {
+            padding: 18px 50px;
+            color: #ffffff;
+            cursor: pointer;
+            transition-duration: 0.35s;
 
-  //     .panel-item {
-  //       font-weight: 600;
-  //       font-size: 16px;
-  //       color: #ffffff;
-  //       padding: 12px;
-  //       display: flex;
-  //       align-items: center;
-  //       transition-duration: 0.3s;
+            &:hover {
+                background: #bcabea;
+                color: #8b1eeb;
+            }
 
-  //       .game-logo {
-  //         width: 28px;
-  //         height: 28px;
-  //         margin-right: 16px;
-  //         border-radius: 50px;
-  //         background-color: #ffffff;
-  //       }
-  //     }
+            .menu-title {
+                font-weight: 600;
+                font-size: 16px;
+                line-height: 150%;
 
-  //     .active {
-  //       background: #172944;
-  //       color: #8deaff;
-  //     }
-  //   }
-  //   }
+                img {
+                    width: 40px;
+                    height: 40px;
+                    margin-right: 24px;
+                }
+            }
+        }
+
+        .active {
+            background: #bcabea;
+            color: #8b1eeb;
+        }
+    }
 }
