--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -2,75 +2,75 @@ $break-point-1: 912px;
 $break-point-2: 1180px;
 
 .navbar {
-  position: relative;
-  background: #132d50;
-  width: 100%;
-  height: 70px;
-
-  .container {
-    max-width: 96%;
+    position: relative;
+    background: #3c1350;
+    width: 100%;
     height: 70px;
-    margin: auto auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
 
-    @media (max-width: $break-point-2) {
-    //   max-width: 940px;
-    }
-
-    @media (max-width: $break-point-1) {
-      padding: 14px;
-    }
-    .menu-icon {
-      cursor: pointer;
-      display: none;
-      @media (max-width: $break-point-1) {
-        display: block;
-      }
-      div {
-        width: 35px;
-        height: 5px;
-        background-color: white;
-        margin: 6px 0;
-      }
-    }
-    .left {
-      display: flex;
-      align-items: center;
-      color: #fff;
-      font-size: 20px;
-      font-weight: 600;
-
-      img {
-        cursor: pointer;
-        width: 82px;
-        height: 50px;
-        margin-right: 100px;
-        @media (max-width: $break-point-1) {
-          margin-right: 0;
-        }
-      }
-      .list {
+    .container {
+        max-width: 96%;
+        height: 70px;
+        margin: auto auto;
         display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        @media (max-width: $break-point-2) {
+            //   max-width: 940px;
+        }
+
         @media (max-width: $break-point-1) {
-          display: none;
+            padding: 14px;
         }
-        .item {
-          margin-right: 60px;
-          cursor: pointer;
+        .menu-icon {
+            cursor: pointer;
+            display: none;
+            @media (max-width: $break-point-1) {
+                display: block;
+            }
+            div {
+                width: 35px;
+                height: 5px;
+                background-color: white;
+                margin: 6px 0;
+            }
         }
-      }
+        .left {
+            display: flex;
+            align-items: center;
+            color: #fff;
+            font-size: 20px;
+            font-weight: 600;
+
+            img {
+                cursor: pointer;
+                width: 82px;
+                height: 50px;
+                margin-right: 100px;
+                @media (max-width: $break-point-1) {
+                    margin-right: 0;
+                }
+            }
+            .list {
+                display: flex;
+                @media (max-width: $break-point-1) {
+                    display: none;
+                }
+                .item {
+                    margin-right: 60px;
+                    cursor: pointer;
+                }
+            }
+        }
     }
-  }
-  .cn-wallet {
-    padding: 10px 18px;
-    color: #fff;
-    font-size: 20px;
-    font-weight: 600;
-    background: linear-gradient(180deg, #00c6fb 0%, #005bea 100%);
-    backdrop-filter: blur(4px);
-    border-radius: 6px;
-    cursor: pointer;
-  }
+    .cn-wallet {
+        padding: 10px 18px;
+        color: #fff;
+        font-size: 20px;
+        font-weight: 600;
+        background: linear-gradient(180deg, #7000ff 0%, #d785fe 100%);
+        backdrop-filter: blur(4px);
+        border-radius: 6px;
+        cursor: pointer;
+    }
 }
