--- a/src/components/NFTItem/NFTItem.module.scss
+++ b/src/components/NFTItem/NFTItem.module.scss
@@ -2,97 +2,105 @@ $break-point-1: 1180px;
 $break-point-2: 912px;
 
 .nft-item {
-  width: 100%;
-  background: #162f54;
-  border: 1px solid #6dd0e7;
-  box-sizing: border-box;
-  border-radius: 7px;
-  height: fit-content;
-  cursor: pointer;
-
-  .top {
-    border-bottom: 1px solid #6dd0e7;
+    width: 250px;
+    min-height: 320px;
+    background: linear-gradient(180deg, #6f08fe 0%, #513e7d 100%);
+    border: 1px solid #ad99e7;
     box-sizing: border-box;
-    border-radius: 8px;
-    width: 100%;
-    height: 270px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100% 100%;
+    border-radius: 6px;
+    height: fit-content;
+    cursor: pointer;
+    margin-right: 32px;
+    margin-bottom: 32px;
 
-    @media (max-width: $break-point-1) {
-      background-size: 150px 190px;
-    }
-
-    .tag {
-      //   background: rgba(255, 255, 255, 0.08);
-      background: #caf2ff;
-	  color: #162f54;
-      border-radius: 4px;
-      font-weight: 600;
-      font-size: 12px;
-      padding: 4px 10px;
-      width: fit-content;
-      margin: 8px;
-      float: right;
-    }
-
-    .nft-image {
-      //   width: 200px;
-      height: 100%;
-
-      img {
-        width: 100%;
-        height: 100%;
+    .top {
+        border-bottom: 1px solid #6dd0e7;
+        box-sizing: border-box;
         border-radius: 8px;
-      }
-    }
-  }
+        width: 100%;
+        height: 270px;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 100% 100%;
 
-  .bottom {
-    padding: 16px;
+        @media (max-width: $break-point-1) {
+            background-size: 150px 190px;
+        }
 
-    .name {
-      display: flex;
-      align-items: center;
+        .tag {
+            background: rgba(232, 217, 255, 0.5);
+            color: #402A7D;
+            border-radius: 4px;
+            font-weight: 600;
+            font-size: 12px;
+            padding: 4px 10px;
+            width: fit-content;
+            margin: 8px;
+            float: right;
+        }
 
-      &-avatar {
-        width: 28px;
-        height: 28px;
-        border-radius: 50%;
-        background-color: #ffffff;
-        //   border: 1px solid #6dd0e7;
-      }
+        .nft-image {
+            //   width: 200px;
+            height: 100%;
 
-      &-text {
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 21px;
-        color: #ffffff;
-        margin-left: 12px;
-      }
-    }
-
-    .title {
-      font-weight: 600;
-      font-size: 18px;
-      line-height: 23px;
-      color: #ffffff;
-      margin: 8px 0px;
+            img {
+                width: 100%;
+                height: 100%;
+                border-radius: 8px;
+            }
+        }
     }
 
-    .number-box {
-      background: rgba(23, 23, 23, 0.3);
-      border-radius: 4px;
-      padding: 8px 12px;
+    .bottom {
+        padding: 20px;
 
-      .number {
-        font-size: 16px;
-        font-weight: 600;
-        background: linear-gradient(180deg, #89e6ff 0%, #3b7ce3 100%);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-      }
+        .name {
+            display: flex;
+            align-items: center;
+
+            &-avatar {
+                width: 28px;
+                height: 28px;
+                border-radius: 50%;
+                background-color: #ffffff;
+                //   border: 1px solid #6dd0e7;
+            }
+
+            &-text {
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 21px;
+                color: #ffffff;
+                margin-left: 12px;
+            }
+        }
+
+        .title {
+            font-weight: 600;
+            font-size: 18px;
+            line-height: 23px;
+            color: #ffffff;
+            margin-bottom: 10px;
+        }
+
+        .nftId {
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 20px;
+            color: #dac6ff;
+			margin-bottom: 10px;
+        }
+
+        .number-box {
+			background: #3D1C6C;
+            border-radius: 4px;
+            padding: 8px 12px;
+
+            .number {
+                font-size: 16px;
+                font-weight: 600;
+                color: #BE74FF;
+            }
+        }
     }
-  }
 }
