--- a/src/pages/Profile/Game/ViewNFT/ViewNFT.module.scss
+++ b/src/pages/Profile/Game/ViewNFT/ViewNFT.module.scss
@@ -1,4 +1,35 @@
+.view-nft {
+    .top {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+		margin-bottom: 30px;
+
+        .title {
+            font-weight: 700;
+            font-size: 20px;
+            line-height: 24px;
+            color: #ffffff;
+        }
+
+        .search {
+            width: 340px;
+            border-bottom: 2px solid #ffffff;
+            color: #ffffff !important;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            font-family: "Mali-Regular", sans-serif;
+
+            .icon {
+                cursor: pointer;
+                color: #ffffff;
+            }
+        }
+    }
+}
+
 .pagination {
-	text-align: center;
-	margin-top: 30px;
-  }
+    text-align: center;
+    margin-top: 30px;
+}
