--- a/src/components/NFTItem/NFTItem.module.scss
+++ b/src/components/NFTItem/NFTItem.module.scss
@@ -14,7 +14,7 @@ $break-point-2: 912px;
     margin-bottom: 32px;
 
     .top {
-        border-bottom: 1px solid #6dd0e7;
+        border-bottom: 1px solid #ad99e7;
         box-sizing: border-box;
         border-radius: 8px;
         width: 100%;
@@ -29,7 +29,7 @@ $break-point-2: 912px;
 
         .tag {
             background: rgba(232, 217, 255, 0.5);
-            color: #402A7D;
+            color: #402a7d;
             border-radius: 4px;
             font-weight: 600;
             font-size: 12px;
@@ -88,18 +88,18 @@ $break-point-2: 912px;
             font-size: 16px;
             line-height: 20px;
             color: #dac6ff;
-			margin-bottom: 10px;
+            margin-bottom: 10px;
         }
 
         .number-box {
-			background: #3D1C6C;
+            background: #3d1c6c;
             border-radius: 4px;
             padding: 8px 12px;
 
             .number {
                 font-size: 16px;
                 font-weight: 600;
-                color: #BE74FF;
+                color: #be74ff;
             }
         }
     }
