--- a/src/pages/Profile/Store/SellItemNFT/index.module.scss
+++ b/src/pages/Profile/Store/SellItemNFT/index.module.scss
@@ -3,26 +3,33 @@ $mobile: 600px;
 $mobile-2: 500px;
 $mobile-3: 400px;
 .table{
-    font-family: "Mali";
+    font-family: 'Montserrat';
+    position: relative;
     &-header{
         height: 40px;
         padding: 9px 0px;
-        border-radius: 4px;
-        background: #F3F7FA;
+        border-radius: 4px 4px 0px 0px;
+        background: #FAF0FF;
         color: #181818;
         font-size: 14px;
         line-height: 21px;
         font-weight: bold;
     }
     &-body{
-        padding: 10px 16px;
-        color: #E4E4E4;
-        border-radius: 4px;
-        border: 1px solid #A4D9EA;
+        padding: 10px 8px;
+        color: #402A7D;
+        border-radius: 0px 0px 4px 4px;
+        border: 1px solid #CFA4EA;
 
-        background: rgba(255, 255, 255, 0.1);
+        background: #EBE3FF;
         backdrop-filter: blur(50px);
-        
+        position: relative;
+        .add-icon {
+          position: absolute;
+          right: -48px;
+          bottom: 4px;
+          cursor: pointer;
+        }
        
     }
     .wrapper-btn{
@@ -48,6 +55,7 @@ $mobile-3: 400px;
     border-radius: 4px;
    }
     }
+    
     
 
 }
