--- a/src/pages/Profile/Store/index.module.scss
+++ b/src/pages/Profile/Store/index.module.scss
@@ -1,11 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Mali:wght@300;500;600;700&family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,500;1,600&display=swap');
 $break-point-1: 814px;
 $mobile: 576px;
+// $break-point-1: 1180px;
+$break-point-2: 912px;
+$break-point-3: 767px;
 .profile {
   padding-bottom: 60px;
 
   .right {
     color: #ffffff !important;
-    margin-left: 48px;
+    // margin-left: 48px;
     @media (max-width: $break-point-1) {
       margin-left: 0px;
       max-width: 100%;
@@ -22,24 +26,31 @@ $mobile: 576px;
         font-weight: 600;
         font-size: 16px;
         line-height: 150%;
-        font-family: "Mali";
+        font-family: 'Montserrat';
+        border-radius: 0px;
         @media (max-width: $mobile) {
           font-size: 14px;
           padding: 6px 12px;
         }
       }
+      .button:first-of-type{
+        border-radius: 4px 0px 0px 4px !important;
+      }
+      .button:last-of-type{
+        border-radius: 0px 4px 4px 0px !important;
+
+      }
       .text {
-        background: linear-gradient(180deg, #89e6ff 0%, #3b7ce3 100%);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
+        background: linear-gradient(270.09deg, #6441A5 0.1%, #2A0845 99.94%);
+        color: #fff;
       }
 
       .active {
-        background: linear-gradient(180deg, #4ad7e0 0%, #4aabe1 100%);
-        color: #ffffff !important;
+        background: #fff;
+        color: #402A7D;
       }
     }
-
+    
     .content {
       width: 100%;
       margin-top: 40px;
