--- a/src/components/NFTItem/NFTItem.module.scss
+++ b/src/components/NFTItem/NFTItem.module.scss
@@ -2,18 +2,22 @@ $break-point-1: 1180px;
 $break-point-2: 912px;
 
 .nft-item {
-    width: 100%;
+    // width: 250px;
+    width: 270px;
+    min-height: 320px;
     background: linear-gradient(180deg, #6f08fe 0%, #513e7d 100%);
     border: 1px solid #ad99e7;
     box-sizing: border-box;
     border-radius: 6px;
     height: fit-content;
     cursor: pointer;
+    margin-right: 32px;
+    margin-bottom: 32px;
 
     .top {
-        // border-bottom: 1px solid #6dd0e7;
+        border-bottom: 1px solid #ad99e7;
         box-sizing: border-box;
-        border-radius: 8px 8px 0px 0px;
+        border-radius: 8px;
         width: 100%;
         height: 270px;
         background-repeat: no-repeat;
@@ -25,7 +29,6 @@ $break-point-2: 912px;
         }
 
         .tag {
-            //   background: rgba(255, 255, 255, 0.08);
             background: rgba(232, 217, 255, 0.5);
             color: #402a7d;
             border-radius: 4px;
@@ -50,36 +53,43 @@ $break-point-2: 912px;
     }
 
     .bottom {
-        padding: 16px;
+        padding: 20px;
 
         .name {
-            // display: flex;
-            // align-items: center;
+            display: flex;
+            align-items: center;
 
-            // &-avatar {
-            //   width: 28px;
-            //   height: 28px;
-            //   border-radius: 50%;
-            //   background-color: #ffffff;
-            //   //   border: 1px solid #6dd0e7;
-            // }
+            &-avatar {
+                width: 28px;
+                height: 28px;
+                border-radius: 50%;
+                background-color: #ffffff;
+                //   border: 1px solid #6dd0e7;
+            }
 
             &-text {
-                font-weight: 600;
-                font-size: 18px;
-                line-height: 22px;
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 21px;
                 color: #ffffff;
-                // margin-left: 12px;
+                margin-left: 12px;
             }
         }
 
         .title {
-            font-family: "Montserrat";
+            font-weight: 600;
+            font-size: 18px;
+            line-height: 23px;
+            color: #ffffff;
+            margin-bottom: 10px;
+        }
+
+        .nftId {
             font-weight: 500;
             font-size: 16px;
-            line-height: 23px;
+            line-height: 20px;
             color: #dac6ff;
-            margin: 8px 0px;
+            margin-bottom: 10px;
         }
 
         .number-box {
