--- a/src/components/ListSkeleton/Card.module.scss
+++ b/src/components/ListSkeleton/Card.module.scss
@@ -1,6 +1,7 @@
 .skeleton{
-    background: #162f54;
+    background: linear-gradient(180deg, #6F08FE 0%, #513E7D 100%);
     border-radius: 10px;
-    border: 1px solid #6dd0e7;
+    border: 1px solid 
+    #AD99E7;
     padding: 0px 4px;
   }
