--- a/src/pages/Profile/Store/ViewItemNFT/index.module.scss
+++ b/src/pages/Profile/Store/ViewItemNFT/index.module.scss
@@ -68,6 +68,7 @@ $break-point-3: 767px;
           }
 
           &-label {
+            cursor: default;
             display: flex;
             align-items: center;
             justify-content: space-between;
