--- a/src/components/MainLayout/index.module.scss
+++ b/src/components/MainLayout/index.module.scss
@@ -7,6 +7,7 @@ $break-point-3: 767px;
     // background-image: url("../../assets/images/main-background.svg");
     // width: 100vw;
     min-height: 100vh;
+    height: 100%;
     // background-repeat: no-repeat;
     // background-size: cover;
     // background-position: center;
