--- a/src/pages/Profile/Store/ViewItemNFT/index.module.scss
+++ b/src/pages/Profile/Store/ViewItemNFT/index.module.scss
@@ -125,3 +125,7 @@ $break-point-3: 767px;
   .list{
       margin-top: 46px;
   }
+  .pagination {
+    text-align: center;
+    margin-top: 30px;
+}
