--- a/src/components/Header/NavModal.module.scss
+++ b/src/components/Header/NavModal.module.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: calc(100vh);
-  background: #162f54;
+  background: #1B1349;
   z-index: 9;
   opacity: 1;
   transition: all 2s ease-in-out;
@@ -15,17 +15,21 @@
   transform-origin: top;
   animation-duration: 1s;
   transition: all 1s ease-in-out;
+
   @keyframes example {
     0% {
       height: 0;
     }
+
     100% {
       height: 100vh;
     }
   }
+
   .list {
     text-align: center;
     padding-top: 60px;
+
     .item {
       padding-bottom: 10px;
     }
@@ -39,4 +43,82 @@
   position: absolute;
   top: -20px;
   right: 20px;
+}
+
+.game-info {
+  display: flex;
+  flex-direction: column;
+  padding: 35px 42px;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+
+  .image-box {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    padding: 3px;
+    z-index: 2;
+    background: #402a7d;
+    text-align: center;
+
+    .game-image {
+      width: 74px;
+      height: 74px;
+      border-radius: 50%;
+      padding: 5px;
+      z-index: 3;
+      background: #e7dfff;
+    }
+  }
+
+  .game-name {
+    position: absolute;
+    bottom: -10%;
+    width: fit-content;
+    background: rgba(254, 253, 255, 0.25);
+    border: 1px solid #ccb9ff;
+    box-sizing: border-box;
+    border-radius: 8px;
+    padding: 26px 50px 14px 50px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 150%;
+    color: #e7dfff;
+  }
+}
+
+.menu {
+  margin-top: 60px;
+  border-top: 1px solid #5e4b93;
+  padding-top: 40px;
+
+  .menu-item {
+    padding: 18px 50px;
+    color: #ffffff;
+    cursor: pointer;
+    transition-duration: 0.35s;
+
+    &:hover {
+      background: #bcabea;
+      color: #8b1eeb;
+    }
+
+    .menu-title {
+      font-weight: 600;
+      font-size: 16px;
+      line-height: 150%;
+
+      img {
+        width: 40px;
+        height: 40px;
+        margin-right: 24px;
+      }
+    }
+  }
+
+  .active {
+    background: #bcabea;
+    color: #8b1eeb;
+  }
 }
