--- a/src/pages/Profile/Store/SellItemNFT/Item.module.scss
+++ b/src/pages/Profile/Store/SellItemNFT/Item.module.scss
@@ -27,7 +27,9 @@ $w-input : 100px;
     font-weight: bold;
     border: 1px solid #DBD2F2;
     outline: none;
-
+    @media(max-width: $mobile-2){
+      width: 50px;
+    }
     &::placeholder {
       color: #e4e4e4;
     }
@@ -37,7 +39,9 @@ $w-input : 100px;
     text-align: center;
     @extend .search-input;
     width: 60px;
-
+    @media(max-width: $mobile-2){
+      width: 40px;
+    }
   }
 
   .price-input::-webkit-outer-spin-button,
