--- a/src/pages/Profile/Game/MintNFT/TableAddAttribute.module.scss
+++ b/src/pages/Profile/Game/MintNFT/TableAddAttribute.module.scss
@@ -2,54 +2,58 @@ $break-point-1: 814px;
 $mobile: 576px;
 .table {
     .header {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
+        background: #f7f3fa;
+        border-radius: 4px;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 150%;
+        color: #402a7d;
+
         @media (max-width: $mobile) {
             text-align: center;
         }
         &-cell {
-            border-right: 1px solid rgba(109, 208, 231, 0.16);
-            padding: 12px 20px;
+            padding: 8px 20px;
             @media (max-width: $mobile) {
                 padding: 6px 8px;
             }
         }
 
         &-cell-last {
-            padding: 12px 20px;
+            padding: 8px 20px;
             border-right: none !important;
         }
     }
 
     .data {
         align-items: center;
-        border-top: 1px solid rgba(109, 208, 231, 0.16);
+        background: #594f75;
+        border-radius: 4px;
+		margin-top: 3px;
 
         .delete-icon {
             cursor: pointer;
-            padding: 7px;
+            padding: 5px;
             border-radius: 50%;
-            background: rgba(112, 0, 255, 0.25);
+            background: rgba(254, 253, 255, 0.25);
             transition-duration: 0.35s;
-            margin-left: 30px;
-			color: #7000ff;
-            @media (max-width: $break-point-1) {
-                margin-left: 0;
-            }
+            color: #e7dfff;
+            font-size: 24px;
+
             &:hover {
-                background: rgba(112, 0, 255, 0.15);
+                background: rgba(254, 253, 255, 0.25);
             }
 
             &:active {
-                background: rgba(112, 0, 255, 0.35);
+                background: rgba(254, 253, 255, 0.35);
             }
         }
 
         &-cell {
-            border-right: 1px solid rgba(109, 208, 231, 0.16);
-            // border-top: 1px solid rgba(109, 208, 231, 0.16);
-            padding: 12px 20px;
+            padding: 8px 20px;
+            display: flex;
+            align-items: center;
+
             @media (max-width: $break-point-1) {
                 min-height: 56px;
                 padding: 6px 20px;
@@ -80,11 +84,6 @@ $mobile: 576px;
                     padding-left: 5px;
                 }
             }
-        }
-
-        &-cell-last {
-            @extend .data-cell;
-            border-right: none !important;
         }
     }
 }
