--- a/src/pages/Profile/CreateGame/CreateGame.module.scss
+++ b/src/pages/Profile/CreateGame/CreateGame.module.scss
@@ -185,6 +185,40 @@ $mobile: 576px;
         top: 50%;
         transform: translateY(40%);
     }
+    .modal_failed {
+        position: relative;
+        top: 50%;
+        transform: translateY(25%);
+    }
+    .loading_logo {
+        -webkit-transform: translateZ(0);
+        -ms-transform: translateZ(0);
+        transform: translateZ(0);
+        -webkit-animation: spin-animation 1.5s infinite linear;
+        animation: spin-animation 1.5s infinite linear;
+        display: inline-block;
+    }
+    @keyframes spin-animation {
+        0% {
+            -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+        }
+        100% {
+            -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+        }
+    }
+
+    @-webkit-keyframes spin-animation {
+        0% {
+            -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+        }
+        100% {
+            -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+        }
+    }
     .modal_text {
         padding-top: 30px;
         font-family: Montserrat;
