fix: image in preview modal

--- a/src/pages/Profile/Game/MintNFT/DetailModal.module.scss
+++ b/src/pages/Profile/Game/MintNFT/DetailModal.module.scss
@@ -34,6 +34,10 @@
             border-radius: 8px;
             border: 1px solid #ad99e7;
             margin-right: 40px;
+
+			img {
+				border-radius: 8px;
+			}
         }
 
         .right {
