--- a/src/pages/Profile/Game/MintNFT/PreviewModal.module.scss
+++ b/src/pages/Profile/Game/MintNFT/PreviewModal.module.scss
@@ -57,12 +57,18 @@
                 border-radius: 8px;
                 width: 100%;
                 height: 180px;
-                background-repeat: no-repeat;
-                background-position: center;
-                background-size: 100% 100%;
+                // background-repeat: no-repeat;
+                // background-position: center;
+                // background-size: 101% 101%;
 
                 @media (max-width: $break-point-1) {
                     background-size: 80px 120px;
+                }
+
+                .preview-img {
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 8px;
                 }
             }
 
